--- a/docs/guide.mdx
+++ b/docs/guide.mdx
@@ -8,3 +8,47 @@ slug: /guide
 
 Explore the various features and capabilities of the Paysecure API through the following sections:
 
+<div style={{ display: 'flex', flexWrap: 'wrap', gap: '20px' }}>
+  {/* <a href="/pages/apm-integrations" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+    <div style={{ padding: '16px' }}>
+    <h3 style={{ margin: '16px 0 0' }}>Payment Methods</h3>
+    <p>Learn what payment methods we support!.</p>
+    </div>
+  </a> */}
+  <a href="/docs/intro" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+    <div style={{ padding: '16px' }}>
+      <h3 style={{ margin: '0 0 16px' }}>Getting Started</h3>
+      <p>Learn how to quickly integrate with the Paysecure API.</p>
+    </div>
+  </a>
+  <a href="/docs/authentication" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+    <div style={{ padding: '16px' }}>
+      <h3 style={{ margin: '0 0 16px' }}>Authentication</h3>
+      <p>Understand the authentication mechanisms used by the Paysecure API.</p>
+    </div>
+  </a>
+  {/* <a href="/path/to/api-reference" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+    <div style={{ padding: '16px' }}>
+      <h3 style={{ margin: '0 0 16px' }}>API Reference</h3>
+      <p>Detailed documentation of all API endpoints and their usage.</p>
+    </div>
+  </a> */}
+  <a href="/docs/FAQ" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+    <div style={{ padding: '16px' }}>
+      <h3 style={{ margin: '0 0 16px' }}>FAQ</h3>
+      <p>Frequently asked questions about the Paysecure API.</p>
+    </div>
+  </a>
+<a href="/docs/trust-score" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+  <div style={{ padding: '16px' }}>
+    <h3 style={{ margin: '0 0 16px' }}>Products of Paysecure</h3>
+    <p>Comprehensive guides to help you navigate the Paysecure API.</p>
+  </div>
+</a>
+<a href="/docs/payment-methods" style={{ textDecoration: 'none', flex: '1 1 30%', minWidth: '250px', border: '1px solid #ddd', borderRadius: '8px', overflow: 'hidden', boxShadow: '0 2px 4px rgba(0,0,0,0.1)' }}>
+  <div style={{ padding: '16px' }}>
+    <h3 style={{ margin: '0 0 16px' }}>Payment Methods</h3>
+    <p>Payment Methods that Paysecure supports</p>
+  </div>
+</a>
+</div>
