--- a/docs/api-reference/intro.mdx
+++ b/docs/api-reference/intro.mdx
@@ -62,7 +62,7 @@ This section aims to provide **technical insights** (setup processes, implementa
 
 ---
 
-## OpenBanking API
+{/* ## OpenBanking API
 
 <div className="card-grid">
   <a className="card" href="/api-reference/openbanking/openbanking-api">
@@ -77,14 +77,13 @@ This section aims to provide **technical insights** (setup processes, implementa
     <h3>Webhooks</h3>
     <p>Real-time updates for OpenBanking events.</p>
   </a>
-</div>
+</div> */}
 
----
 
 ## General APIs
 
 <div className="card-grid">
-  <a className="card" href="/api-reference/get-status-api/get-status-api">
+  <a className="card" href="/api-reference/get-status-api/documentation">
     <h3>Get Status API</h3>
     <p>Retrieve all details of a purchase (PayIn).</p>
   </a>
@@ -98,7 +97,7 @@ This section aims to provide **technical insights** (setup processes, implementa
   </a>
 </div>
 
----
+{/* ---
 
 ## Cashier APIs
 
@@ -119,4 +118,4 @@ This section aims to provide **technical insights** (setup processes, implementa
     <h3>Post createSession</h3>
     <p>Create a new session for processing.</p>
   </a>
-</div>
+</div> */}
