--- a/docs/api-reference/interac/pay-in.mdx
+++ b/docs/api-reference/interac/pay-in.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Interac PayIn API"
-id: payin
+id: pay-in
 description: "API for processing payments using Interac in Canada."
 openapi: "openapi POST /purchases"
 ---
