--- a/docs/api-reference/interac/pay-out.mdx
+++ b/docs/api-reference/interac/pay-out.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Payout API"
-id: payout-api
+id: pay-out
 description: "API for processing payouts using Paysecure."
 openapi: "openapi POST /payout"
 ---
