--- a/docs/payment-methods.mdx
+++ b/docs/payment-methods.mdx
@@ -3,3 +3,17 @@ id: payment-methods
 title: Payment Methods
 description: "Payment Methods that Paysecure supports"
 ---
+
+Paysecure offers a versatile and secure range of payment methods designed to support seamless transactions across diverse business needs
+Paysecure ensures that you can accept payments efficiently and securely from customers worldwide.
+
+This section provides a comprehensive overview of all the payment methods supported by Paysecure, including:
+
+- **Interac**: A widely used payment method in Canada, allowing users to make secure online transactions directly from their bank accounts.
+- **Interac E-Transfer**: A convenient way to send and receive money using email or text messages, making it easy for users to transfer funds securely.
+- **PIX**: A real-time payment system in Brazil that enables instant transfers between bank accounts, providing a fast and efficient way to send and receive money.
+- **Fawry**: A popular payment method in Egypt, allowing users to make payments through a network of agents and kiosks.
+- **UPI**: A mobile payment system in India that allows users to make instant bank transfers using their smartphones, providing a convenient way to send and receive money.
+- **Mobile Money**: A digital payment solution that enables users to send and receive money using their mobile phones, making it easy to conduct transactions without the need for a bank account.
+- **Bank Transfer**: A traditional payment method that allows users to transfer funds directly from their bank accounts to the merchant's account.
+- **Credit/Debit Card**: A widely accepted payment method that allows users to make purchases using their credit or debit cards, providing a convenient way to pay for goods and services.
