--- a/docs/api-reference.mdx
+++ b/docs/api-reference.mdx
@@ -1,5 +1,5 @@
 ---
 id: intro
 title: Introduction
-description: "Welcome to Paysecure API Reference"
+description: "Welcome to Fundstream API Reference"
 ---
