--- a/docs/api-reference/intro.mdx
+++ b/docs/api-reference/intro.mdx
@@ -7,7 +7,7 @@ description: "Overview of our APIs"
 
 ## APIs
 
-This section aims to provide **technical insights** (setup processes, implementation flow, request structures, etc.) into **every API endpoint** Paysecure offers.
+This section aims to provide **technical insights** (setup processes, implementation flow, request structures, etc.) into **every API endpoint** Fundstream offers.
 
 ---
 
