--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,7 +1,7 @@
 ---
 id: intro
 title: Introduction
-description: "Welcome to Paysecure API Documentation"
+description: "Welcome to Fundstream API Documentation"
 ---
 
 <div style={{ 
@@ -15,13 +15,12 @@ description: "Welcome to Paysecure API Documentation"
   alignItems: 'center',
   textAlign: 'center'
 }}>
-  <h1 style={{ color: '#E6E938', marginTop: '0' }}>Welcome to Paysecure</h1>
+  <h1 style={{ color: '#E6E938', marginTop: '0' }}>Welcome to Fundstream</h1>
   <p style={{ fontSize: '18px', lineHeight: '1.6', maxWidth: '800px' }}>
     The premier gateway to streamlined online transactions across diverse industries
   </p>
   <img 
     src="/images/payment.png" 
-    alt="Paysecure Payments" 
     style={{ 
       maxWidth: '400px', 
       width: '100%',
@@ -31,11 +30,11 @@ description: "Welcome to Paysecure API Documentation"
   />
 </div>
 
-## About Paysecure
+## About Fundstream
 
-Paysecure is a payment gateway optimization and intelligence service that merchants can use to provide a remote and frictionless payment experience.
+Fundstream is a payment gateway optimization and intelligence service that merchants can use to provide a remote and frictionless payment experience.
 
-Paysecure serves as the premier gateway to streamlined online transactions across diverse industries covering eCommerce, forex, and many more. 
+Fundstream serves as the premier gateway to streamlined online transactions across diverse industries covering eCommerce, forex, and many more. 
 
 Our one-stop-shop solution for online businesses and payment institutions offers the flexibility to access diverse payment methods and swift pay-outs, accelerate transaction speeds, achieve market readiness, reduce fraud and chargebacks, and ultimately boost sales conversion results. 
 
@@ -81,9 +80,9 @@ Our one-stop-shop solution for online businesses and payment institutions offers
 
 ## Getting Started
 
-This documentation will help you get started with integrating Paysecure. Follow these steps to begin your integration:
+This documentation will help you get started with integrating Fundstream. Follow these steps to begin your integration:
 
-1. [Create an account](https://paysecure.net/signup) on Paysecure  
+1. [Create an account](https://fundstream.net/signup) on Fundstream  
 2. Obtain your API credentials from the dashboard  
 3. Choose the payment methods you want to integrate  
 4. Follow our API documentation to implement the integration  
@@ -92,7 +91,5 @@ This documentation will help you get started with integrating Paysecure. Follow 
 
 ## Need Help?
 
-If you have any questions, please do not hesitate to reach out to us via email at [info@paysecure.net](mailto:info@paysecure.net)
-
+If you have any questions, please do not hesitate to reach out to us via email
 Our support team is available during standard business hours.  
-Have suggestions or improvements? [Edit on GitHub](https://github.com/PaysecureCommunity/api-docs/edit/main/introduction.mdx)
