--- a/docs/payment-methods.mdx
+++ b/docs/payment-methods.mdx
@@ -1,13 +1,13 @@
 ---
 id: payment-methods
 title: Payment Methods
-description: "Payment Methods that Paysecure supports"
+description: "Payment Methods that Fundstream supports"
 ---
 
-Paysecure offers a versatile and secure range of payment methods designed to support seamless transactions across diverse business needs
-Paysecure ensures that you can accept payments efficiently and securely from customers worldwide.
+Fundstream offers a versatile and secure range of payment methods designed to support seamless transactions across diverse business needs
+Fundstream ensures that you can accept payments efficiently and securely from customers worldwide.
 
-This section provides a comprehensive overview of all the payment methods supported by Paysecure, including:
+This section provides a comprehensive overview of all the payment methods supported by Fundstream, including:
 
 - **Interac**: A widely used payment method in Canada, allowing users to make secure online transactions directly from their bank accounts.
 - **Interac E-Transfer**: A convenient way to send and receive money using email or text messages, making it easy for users to transfer funds securely.
