--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -1,8 +1,7 @@
 ---
 title: Support
 id: support
-description: "Support for Paysecure API"
+description: "Support for Fundstream API"
 ---
 
-If you need further assistance, please contact our support team:
-- **Email:** info@paysecure.net
+If you need further assistance, please contact our support team
