--- a/docs/FAQ.mdx
+++ b/docs/FAQ.mdx
@@ -1,12 +1,9 @@
 ---
 id: FAQ
 title: FAQ
-description: Frequently asked questions about the Paysecure API.
+description: Frequently asked questions about the Fundstream API.
 ---
 
-
-## Q1. How do I log in to the dashboard?
-**Ans:** Click on the following link: [Paysecure Dashboard](https://app.paysecure.net/). Enter your username and password to access the dashboard.
 
 ## Q2. How do I switch to live mode in the Merchant Dashboard?
 **Ans:** To access the live API key, uncheck the "Is Sandbox" option located in the top right corner of your Merchant Dashboard.
@@ -23,8 +20,8 @@ description: Frequently asked questions about the Paysecure API.
 ## Q6. Can a merchant use the test data values from the sandbox in live mode?
 **Ans:** No, test data from the sandbox cannot be used in live mode. The sandbox environment is meant for testing purposes, and live transactions require real data and a separate live API key and Brand ID.
 
-## Q7. Does Paysecure support card in sandbox mode?
-**Ans:** Yes, Paysecure supports card transactions in sandbox mode for testing purposes.
+## Q7. Does Fundstream support card in sandbox mode?
+**Ans:** Yes, Fundstream supports card transactions in sandbox mode for testing purposes.
 
 ## Q8. Can the APM method be used in sandbox mode?
 **Ans:** No, the APM method can only be used for testing in live mode.
@@ -68,11 +65,11 @@ To create a new purchase, use the **POST** HTTP method with the following API en
 
 - **For Pay-In:**
   ```
-  POST https://api.paysecure.net/api/v1/purchases/
+  POST https://api.fundstream.net/api/v1/purchases/
   ```
 - **For Pay-Out:**
   ```
-  POST https://api.paysecure.net/api/v1/payout/
+  POST https://api.fundstream.net/api/v1/payout/
   ```
 
 Make sure to include the required authentication headers, such as the API key and Brand ID, in the request.
@@ -82,11 +79,11 @@ Make sure to include the required authentication headers, such as the API key an
 
 - **To check the status of a Pay-In transaction:**
   ```
-  GET https://api.paysecure.net/api/v1/purchases/{purchaseId}/
+  GET https://api.fundstream.net/api/v1/purchases/{purchaseId}/
   ```
 - **To check the balance after a Pay-Out transaction:**
   ```
-  GET https://api.paysecure.net/api/v1/getpayout/{payoutId}/
+  GET https://api.fundstream.net/api/v1/getpayout/{payoutId}/
   ```
 
 Merchants must include the required authentication headers, such as the API key, when making these requests.
