--- a/docs/api-reference/fawry-pay/pay-out.mdx
+++ b/docs/api-reference/fawry-pay/pay-out.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Paysecure PayOut API"
-description: "API for initiating payouts, checking transaction status, and retrieving balance information using Paysecure."
+title: "Fundstream PayOut API"
+description: "API for initiating payouts, checking transaction status, and retrieving balance information using Fundstream."
 openapi: "openapi POST /payouts"
 ---
 
@@ -19,7 +19,7 @@ const axios = require("axios");
 
 (async () => {
   const response = await axios.post(
-    "https://staging.paysecure.net/api/v1/payout",
+    "https://staging.fundstream.net/api/v1/payout",
     {
       client: {
         email: "test@gmail.com",
@@ -56,7 +56,7 @@ const axios = require("axios");
 (async () => {
   const payoutId = "6685467c0e5b201a73f91256";
   const response = await axios.get(
-    `https://staging.paysecure.net/api/v1/getpayout/${payoutId}`,
+    `https://staging.fundstream.net/api/v1/getpayout/${payoutId}`,
     {
       headers: {
         "Authorization": "Bearer <your_token>",
@@ -82,7 +82,7 @@ const axios = require("axios");
 
 (async () => {
   const response = await axios.post(
-    "https://staging.paysecure.net/api/v1/getBalance",
+    "https://staging.fundstream.net/api/v1/getBalance",
     { paymentMethod: "INTERAC" },
     {
       headers: {
